[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Stock.gd" type="Script" id=1]

[node name="Stock" type="Control"]
anchor_left = 0.319813
anchor_top = 0.28
anchor_right = 0.750313
anchor_bottom = 0.746333
margin_left = 0.511993
margin_right = -0.320007
margin_bottom = 0.199951
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 75
alignment = 1

[node name="StockNameLabel" type="Label" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 399.0
margin_bottom = 34.0
text = "Random Stock Name"
align = 1
valign = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 109.0
margin_right = 399.0
margin_bottom = 123.0
custom_constants/separation = 25
alignment = 1

[node name="ProfitLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 187.0
margin_bottom = 14.0
text = "Potential Profit: $1000 (36%)"
align = 1
valign = 1

[node name="LossLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 395.0
margin_bottom = 14.0
text = "Potential Loss: -$2500 (11%)"
align = 1
valign = 1

[node name="InvestButton" type="Button" parent="VBoxContainer"]
margin_left = 173.0
margin_top = 198.0
margin_right = 225.0
margin_bottom = 218.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Invest"
